--- a/projects/acme-demo-flight-webservice/.settings/org.eclipse.wst.common.component
+++ b/projects/acme-demo-flight-webservice/.settings/org.eclipse.wst.common.component
@@ -3,7 +3,7 @@
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="AcmeDemo"/>
         <property name="java-output-path" value="/AcmeDemo/build/classes"/>
+        <property name="context-root" value="flight"/>
     </wb-module>
 </project-modules>
