--- a/projects/acme-demo-hotel-webservice/.settings/org.eclipse.wst.common.component
+++ b/projects/acme-demo-hotel-webservice/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/AcmeDemo/build/classes"/>
-        <property name="context-root" value="AcmeDemoHotel"/>
+        <property name="context-root" value="hotel"/>
     </wb-module>
 </project-modules>
